--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*
+{
+    font-family:sans-serif;
+}
+
 html,body{
     margin:0;
 }
@@ -83,9 +88,10 @@ body
 {
     text-align: right;
     padding:15px;
-    border:0.5px solid rgb(255, 251, 251);
+    border:0.5px solid rgb(66, 63, 63);
     border-radius:5px;
     margin-bottom:20px;
+    height:25px;
 }
 
 .right-operator
@@ -98,4 +104,9 @@ body
 {
     color:white;
     background-color: rgba(232, 236, 229, 0.236);
+}
+
+.text
+{
+    font-size:30px;
 }
